# mouse2controller

./: .gitignore  CMakeLists.txt  README.md  build.bat  build_vigem.bat
res/: resource.rc
src/: CurveMap.h  GearList.h  StickMapper.h  VigemClient.h  config.h  main.cpp
